--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>OrdenamientoyBusqueda</title>
+  <title>Sorting & Searching</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/bootstrap-paper.min.css?v=3.3.7">
+  <link rel="stylesheet" href="assets/css/material-cyan.css?v=1">  
+  <link rel="stylesheet" href="assets/css/style.css?v=4">
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -24,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <a class="navbar-brand" href="/">Ordenamiento y Busqueda</a>
+        <a class="navbar-brand" href="/">Sorting & Searching</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -33,24 +34,21 @@
           <li class="active"><a href="#">Ordenamiento <span class="sr-only">(current)</span></a></li>
           <li><a href="#">Busqueda</a></li>
         </ul>
-        <form class="navbar-form navbar-right">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Buscar en la página">
-          </div>
-          <button type="submit" class="btn btn-default">Buscar</button>
-        </form>
       </div>
       <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
   </nav>
-  <app-root class="jumbotron"><div class="container"><h3>Loading...</h3></div></app-root>
+  <app-root class="jumbotron">
+    <div class="container">
+      <h3>Loading...</h3>
+    </div>
+  </app-root>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="assets/js/jquery.min.js?v=1.12.4"></script>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
+  <script src="assets/js/bootstrap.min.js?v=3.3.7"></script>
 </body>
 
 </html>
