--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
-<html>
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
   <title>Sorting & Searching</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap-paper.min.css?v=3.3.7">
-  <link rel="stylesheet" href="assets/css/material-cyan.css?v=1">  
-  <link rel="stylesheet" href="assets/css/style.css?v=4">
+  <link rel="stylesheet" href="assets/css/material-cyan-theme.css?v=1">  
+  <link rel="stylesheet" href="assets/css/style.css?v=5">
 </head>
 
 <body>
@@ -41,13 +40,13 @@
   </nav>
   <app-root class="jumbotron">
     <div class="container">
-      <h3>Loading...</h3>
+      <div class="container-loader">
+        <div class="loader"></div>
+      </div>
     </div>
   </app-root>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="assets/js/jquery.min.js?v=1.12.4"></script>
-  <!-- Latest compiled and minified JavaScript -->
   <script src="assets/js/bootstrap.min.js?v=3.3.7"></script>
 </body>
 
