--- a/src/index.html
+++ b/src/index.html
@@ -8,33 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/css/bootstrap-paper.min.css?v=3.3.7">
-  <link rel="stylesheet" href="assets/css/material-cyan-theme.css?v=1">  
+  <link rel="stylesheet" href="assets/css/material-cyan-theme.css?v=1">
   <link rel="stylesheet" href="assets/css/style.css?v=5">
 </head>
 
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-          aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-        <a class="navbar-brand" href="/">Sorting & Searching</a>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Ordenamiento <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Busqueda</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  
-  <app-root class="jumbotron">
+  <app-nav></app-nav>
+  <app-root>
     <div class="container">
       <div class="container-loader">
         <div class="loader"></div>
@@ -44,6 +24,7 @@
 
   <script src="assets/js/jquery.min.js?v=1.12.4"></script>
   <script src="assets/js/bootstrap.min.js?v=3.3.7"></script>
+  <script src="assets/js/init.js?v=5"></script>
 </body>
 
 </html>
